Fixed npm run error

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu);@import url(https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap);@charset "UTF-8";
+@charset "UTF-8";
 
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
@@ -7,6 +7,7 @@
 
 /* FONT PATH
  * -------------------------- */
+
 @font-face {
   font-family: "FontAwesome";
   src: url(/fonts/vendor/font-awesome/fontawesome-webfont.eot?674f50d287a8c48dc19ba404d20fe713);
@@ -13990,226 +13991,6 @@ a.text-dark:focus {
     color: inherit;
     border-color: #073642;
   }
-}
-
-.btn-primary {
-  background: #3490dc linear-gradient(180deg, #52a1e1, #3490dc) repeat-x;
-}
-
-.btn-secondary {
-  background: #839496 linear-gradient(180deg, #96a4a6, #839496) repeat-x;
-}
-
-.btn-success {
-  background: #38c172 linear-gradient(180deg, #56ca87, #38c172) repeat-x;
-}
-
-.btn-info {
-  background: #6cb2eb linear-gradient(180deg, #82beee, #6cb2eb) repeat-x;
-}
-
-.btn-warning {
-  background: #ffed4a linear-gradient(180deg, #fff065, #ffed4a) repeat-x;
-}
-
-.btn-danger {
-  background: #e3342f linear-gradient(180deg, #e7524e, #e3342f) repeat-x;
-}
-
-.btn-light {
-  background: #fdf6e3 linear-gradient(180deg, #fdf7e7, #fdf6e3) repeat-x;
-}
-
-.btn-dark {
-  background: #073642 linear-gradient(180deg, #2c545e, #073642) repeat-x;
-}
-
-.table-primary,
-.table-secondary,
-.table-dark,
-.table-success,
-.table-info,
-.table-warning,
-.table-danger {
-  color: #fff;
-}
-
-.table-primary,
-.table-primary > th,
-.table-primary > td {
-  background-color: #3490dc;
-}
-
-.table-secondary,
-.table-secondary > th,
-.table-secondary > td {
-  background-color: #839496;
-}
-
-.table-light,
-.table-light > th,
-.table-light > td {
-  background-color: #fdf6e3;
-}
-
-.table-dark,
-.table-dark > th,
-.table-dark > td {
-  background-color: #073642;
-}
-
-.table-success,
-.table-success > th,
-.table-success > td {
-  background-color: #38c172;
-}
-
-.table-info,
-.table-info > th,
-.table-info > td {
-  background-color: #6cb2eb;
-}
-
-.table-danger,
-.table-danger > th,
-.table-danger > td {
-  background-color: #e3342f;
-}
-
-.table-warning,
-.table-warning > th,
-.table-warning > td {
-  background-color: #ffed4a;
-}
-
-.table-active,
-.table-active > th,
-.table-active > td {
-  background-color: rgba(255, 255, 255, 0.075);
-}
-
-.table-hover .table-primary:hover,
-.table-hover .table-primary:hover > th,
-.table-hover .table-primary:hover > td {
-  background-color: #2484d2;
-}
-
-.table-hover .table-secondary:hover,
-.table-hover .table-secondary:hover > th,
-.table-hover .table-secondary:hover > td {
-  background-color: #75888a;
-}
-
-.table-hover .table-light:hover,
-.table-hover .table-light:hover > th,
-.table-hover .table-light:hover > td {
-  background-color: #fbeecb;
-}
-
-.table-hover .table-dark:hover,
-.table-hover .table-dark:hover > th,
-.table-hover .table-dark:hover > td {
-  background-color: #05232b;
-}
-
-.table-hover .table-success:hover,
-.table-hover .table-success:hover > th,
-.table-hover .table-success:hover > td {
-  background-color: #32ad66;
-}
-
-.table-hover .table-info:hover,
-.table-hover .table-info:hover > th,
-.table-hover .table-info:hover > td {
-  background-color: #56a6e8;
-}
-
-.table-hover .table-danger:hover,
-.table-hover .table-danger:hover > th,
-.table-hover .table-danger:hover > td {
-  background-color: #db231d;
-}
-
-.table-hover .table-warning:hover,
-.table-hover .table-warning:hover > th,
-.table-hover .table-warning:hover > td {
-  background-color: #ffea31;
-}
-
-.table-hover .table-active:hover,
-.table-hover .table-active:hover > th,
-.table-hover .table-active:hover > td {
-  background-color: rgba(255, 255, 255, 0.075);
-}
-
-.custom-control-input:checked ~ .custom-control-label::before {
-  background: #3490dc;
-}
-
-.custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #3490dc;
-}
-
-.custom-control-input:not(:disabled):active ~ .custom-control-label::before {
-  background: #3490dc;
-  border-color: #3490dc;
-}
-
-.custom-switch .custom-control-label::after {
-  background-color: white;
-}
-
-.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
-  background-color: rgba(255, 255, 255, 0.75);
-}
-
-.alert {
-  border: none;
-  color: #fff;
-}
-
-.alert a,
-.alert .alert-link {
-  color: #fff;
-  text-decoration: underline;
-}
-
-.alert-primary {
-  background: #3490dc linear-gradient(180deg, #52a1e1, #3490dc) repeat-x;
-}
-
-.alert-secondary {
-  background: #839496 linear-gradient(180deg, #96a4a6, #839496) repeat-x;
-}
-
-.alert-success {
-  background: #38c172 linear-gradient(180deg, #56ca87, #38c172) repeat-x;
-}
-
-.alert-info {
-  background: #6cb2eb linear-gradient(180deg, #82beee, #6cb2eb) repeat-x;
-}
-
-.alert-warning {
-  background: #ffed4a linear-gradient(180deg, #fff065, #ffed4a) repeat-x;
-}
-
-.alert-danger {
-  background: #e3342f linear-gradient(180deg, #e7524e, #e3342f) repeat-x;
-}
-
-.alert-light {
-  background: #fdf6e3 linear-gradient(180deg, #fdf7e7, #fdf6e3) repeat-x;
-}
-
-.alert-dark {
-  background: #073642 linear-gradient(180deg, #2c545e, #073642) repeat-x;
-}
-
-.alert-light,
-.alert-light a:not(.btn),
-.alert-light .alert-link {
-  color: #f8fafc;
 }
 
 .small-search {
