--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,22 +1,66 @@
-// Body
-$body-bg: #f8fafc;
+
 
 // Typography
 $font-family-sans-serif: 'Ubuntu', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
-// Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+// stylelint-disable
+$white:    #fff !default;
+$gray-100: #fdf6e3 !default;
+$gray-200: #eee8d5 !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #839496 !default;
+$gray-700: #495057 !default;
+$gray-800: #073642 !default;
+$gray-900: #ffffff !default;
+$black:    #000 !default;
 
-// Toggle
-$enable-rounded:   true;
+$blue:    #b58900 !default;
+$indigo:  #6610f2 !default;
+$purple:  #6f42c1 !default;
+$pink:    #e83e8c !default;
+$red:     #d33682 !default;
+$orange:  #fd7e14 !default;
+$yellow:  #cb4b16 !default;
+$green:   #2aa198 !default;
+$teal:    #20c997 !default;
+$cyan:    #268bd2 !default;
+
+$primary:       $blue !default;
+$secondary:     $gray-600 !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $gray-100 !default;
+$dark:          $gray-800 !default;
+
+$enable-gradients: true;
+
+// Links
+
+$link-color:                $success !default;
+$link-hover-color:          $link-color !default;
+
+// Components
+
+$component-active-color:      rgba(255,255,255,.75) !default;
+$component-active-bg:         $gray-800 !default;
+
+// Body
+$body-bg: #000;
+$body-color: $gray-100;
+
+// Forms
+$input-bg:                              #A9BDBD !default;
+$input-disabled-bg:                     #657B83 !default;
+
+$input-border-color:                    rgba($black,.15) !default;
+
+$input-placeholder-color:               #657B83 !default;
+
+$input-group-addon-color:               $gray-600 !default;
+$input-group-addon-bg:                  $gray-800 !default;
