--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,145 +1,9 @@
 // Fonts
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
-// Variables
-@import "node_modules/bootstrap/scss/bootstrap";
+@import "variables";
+@import "filehost";
 
-.small-search {
-    width: 100%; /* Full-width */
-    font-size: 16px; /* Increase font-size */
-    margin-bottom: 12px; /* Add some space below the input */
-}
+// Required
+@import "node_modules/bootstrap/scss/bootstrap.scss";
 
-@font-face {
-    font-family: 'Ubuntu';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Ubuntu'), url("http://fonts.googleapis.com/css?family=Ubuntu") format('woff');
-}
-
-/*
-Max width before this PARTICULAR table gets nasty
-This query will take effect for any screen smaller than 760px
-and also iPads specifically.
-*/
-@media only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px) {
-
-    /* Force table to not be like tables anymore */
-    table, thead, tbody, th, td, tr {
-        display: block;
-    }
-    .td-date, .td-icon {
-        display: none !important;
-    }
-
-    /* Hide table headers (but not display: none;, for accessibility) */
-    thead tr {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
-    }
-
-    tr {
-        border: 1px solid #ccc;
-    }
-
-    td {
-        /* Behave  like a "row" */
-        border: none;
-        border-bottom: 1px solid #eee;
-        position: relative;
-        padding-left: 50%;
-    }
-
-    td:before {
-        /* Now like a table header */
-        position: absolute;
-        /* Top/left values mimic padding */
-        top: 6px;
-        left: 6px;
-        width: 45%;
-        padding-right: 10px;
-        white-space: nowrap;
-    }
-}
-
-
-body {
-    background: #000;
-    font-family: Ubuntu;
-}
-
-tr.click-row {
-    cursor: pointer;
-}
-
-.table tbody tr:hover td {
-    background: rgb(50, 119, 113);
-}
-
-html, body {
-    margin: 0 !important;
-    padding: 0 !important;
-    height: 100% !important;
-}
-
-
-.card-img-top {
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #001c23;
-}
-
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article,
-a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
-}
-
-/* ---------------------------------------------------
-CONTENT STYLE
------------------------------------------------------ */
-
-#content {
-    width: 100%;
-    padding: 20px;
-    min-height: 100vh;
-    transition: all 0.3s;
-    background-color: #002B36;
-}
